text changes in html and colors added in css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <h1>My First Project</h1>
     <p>This is my first project build in an IDE</p>
-    <p> testing 123</p>
+    <h2>VS Code is a handy piece of software to work with</h2>
+    <p>why are my css color not being applied?</p>
     <img src="assets/images/01-02-02_ci-logo.png" alt="Code Institute Logo">
 </body>
 
