--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
-    <h1>My First Project</h1>
-    <p>This is my first project build in an IDE</p>
-    <h2>VS Code is a handy piece of software to work with</h2>
-    <p>why are my css color not being applied?</p>
-    <img src="assets/images/01-02-02_ci-logo.png" alt="Code Institute Logo">
+    <div>
+        <h1>My First Project</h1>
+        <p>This is my first project build in an IDE</p>
+        <h2>VS Code is a handy piece of software to work with</h2>
+        <p>why are my css color not being applied?</p>
+        <img src="assets/images/01-02-02_ci-logo.png" alt="Code Institute Logo">
+    </div>
 </body>
 
 </html>
